Fix badge list centering on mobile devicess

--- a/content/themes/dude/sass/views/_contributions.scss
+++ b/content/themes/dude/sass/views/_contributions.scss
@@ -189,7 +189,7 @@ body.page-template-template-contributions {
           }
 
           @media(max-width: 535px) {
-            max-width: 290px;
+            max-width: 220px;
             margin: 0 auto;
           }
         }
